--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "motion": "^12.4.7",
     "next": "15.2.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
+    "react-masonry-css": "^1.0.16"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "daisyui": "^5.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.2.0",
     "tailwindcss": "^4"
