--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.8.1",
+    "firebase": "^11.4.0",
     "motion": "^12.4.7",
     "next": "15.2.0",
     "react": "^19.0.0",
