--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.23.0",
     "axios": "^1.8.1",
     "firebase": "^11.4.0",
     "lodash": "^4.17.21",
