--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@google/generative-ai": "^0.23.0",
     "axios": "^1.8.1",
+    "dompurify": "^3.2.4",
     "firebase": "^11.4.0",
     "jodit-react": "^5.2.15",
     "lodash": "^4.17.21",
